# rtl

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
include/: collections.hpp  memory.hpp  rtl.hpp  typing.hpp  utilities.hpp
include/collections/: list.hpp
include/memory/: unique_ptr.hpp
include/typing/: concepts.hpp
include/utilities/: assertions.hpp  option.hpp  reference.hpp
tests/: rtl_tests.cpp
